# byk

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  requirements.txt
byk/accounts/auth/: passwords.py
byk/book_mgr/: admin.py  models.py  schemas.py
byk/book_mgr/migrations/: 0001_initial.py  0002_tag_book_comments_book_tags.py  0003_alter_book_author_alter_book_isbn_number_and_more.py  0004_alter_book_location.py  0005_bookstorage_comments.py
byk/book_mgr/routes/: __init__.py  books.py
byk/book_mgr/signal_handlers/: books.py
byk/book_mgr/tasks/: fetch_books.py
byk/byk/: asgi.py  schemas.py  settings.py  settings_env.py  urls.py  wsgi.py
byk/byk/middlewares/: request_id.py
byk/nlc_isbn/: NOTICE.txt  README.md
include/: byk.h
src/: CMakeLists.txt  byk.cpp  db.cpp  db.h  main.cpp  sql.h
tests/: CMakeLists.txt  test_byk.cpp
